--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: ChangHyeon Nam's Blog
+name: Mathematics for ML's Blog
 url: 'https://mathematics-for-ml.github.io/MIT-18.065-Linear-Algebra/'
 description: 'Study notes'
 
